Changes from Version 0.13.4 to 0.13.5 [17-Apr-2010]

* changed package and function names to `crs' as Lijian strictly
  prefers `regression spline' to `smoothing spline' (The major
  difference is to place knots on sample points (smoothing spline,
  Wahba) or on equidistant deterministic points (B spline, Stone))

Changes from Version 0.13.3 to 0.13.4 [07-Apr-2010]

* fixed annoying "Working... Working" in plot (message produced by
  predict.*.spline sufficient here)

* added option for L1 CV (incomplete as properly this would require L1
  estimation as well)

* neglected to set cv and cv.pruned when degree is zero (fixed)

* adjusted R-squared corrected

Changes from Version 0.13.2 to 0.13.3 [28-Mar-2010]

* had to revamp derivative code to support pruning by taking out the
  reordering prior to derivative estimation - new approach is more
  natural with less issues. Examples all pass with flying colors

* had to modify the add1.lm function (modified version is add1.lm.cv)
  to flesh out stepCV

Changes from Version 0.13.1 to 0.13.2 [28-Mar-2010]

* modified stepAIC code from the MASS package to admit the
  cross-validation objective function, renamed to stepCV to not
  clobber users using stepAIC - this is a three line addition of the
  extractCV() function followed by wholesale replacement of AIC with
  CV - appears to work perfectly and now pruning returns models that
  indeed improve in terms of CV (was mixing objective functions
  pruning with stepAIC at the final stage (BIC) and hence testing for
  model that improves etc.)

Changes from Version 0.13.0 to 0.13.1 [25-Mar-2010]

* migrated pruning inside predict.factor.spline, derivatives not
  crashing and are working for one continuous regressor - one major
  benefit is that the object is now a proper cssreg object hence
  predict etc. are fully supported (the old function prune.cssreg
  could not do this)

Changes from Version 0.12.6 to 0.13.0 [22-Mar-2010]
