@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.13-6
-Date: 2010-12-07
+Date: 2010-12-08
 Depends: mgcv
 Suggests: np
 Title: Categorical Regression Splines
