@@ -23,7 +23,7 @@ crsEst <- function(xz,
                    kernel=FALSE,
                    lambda=NULL,
                    kernel.type=c("nominal","ordinal"),
-                   complexity=c("degree","knots"),
+                   complexity=c("degree","knots","degree-knots"),
                    knots=c("quantiles","uniform"),
                    basis=c("additive-tensor","additive","tensor","auto"),
                    deriv=0,
@@ -298,7 +298,7 @@ crs.default <- function(xz,
                         kernel=FALSE,
                         lambda=NULL,
                         kernel.type=c("nominal","ordinal"),
-                        complexity=c("degree","knots"),
+                        complexity=c("degree","knots","degree-knots"),
                         knots=c("quantiles","uniform"),
                         basis=c("additive-tensor","additive","tensor","auto"),
                         deriv=0,
@@ -353,7 +353,7 @@ crs.formula <- function(formula,
                         kernel=FALSE,
                         lambda=NULL,
                         kernel.type=c("nominal","ordinal"),
-                        complexity=c("degree","knots"),
+                        complexity=c("degree","knots","degree-knots"),
                         knots=c("quantiles","uniform"),
                         basis=c("additive-tensor","additive","tensor","auto"),
                         deriv=0,
