@@ -3,7 +3,7 @@ krscv <- function(xz,
                   basis.maxdim=5,
                   kernel.type=c("nominal","ordinal"),
                   restarts=0,
-                  complexity=c("degree","knots"),
+                  complexity=c("degree","knots","degree-knots"),
                   knots=c("quantiles","uniform"),
                   basis = c("additive-tensor","additive","tensor","auto"),
                   cv.norm=c("L2","L1"),
