@@ -18,7 +18,7 @@ prod.spline <- function(x,
                         segments=1,
                         xeval=NULL,
                         zeval=NULL,
-                        complexity=c("degree","knots"),
+                        complexity=c("degree","knots","degree-knots"),
                         knots=c("quantiles","uniform"),
                         basis=c("additive-tensor","additive","tensor","auto"),
                         deriv.index=1,
@@ -153,7 +153,7 @@ predict.kernel.spline <- function(x,
                                   kernel.type=c("nominal","ordinal"),
                                   xeval=NULL,
                                   zeval=NULL,
-                                  complexity=c("degree","knots"),
+                                  complexity=c("degree","knots","degree-knots"),
                                   knots=c("quantiles","uniform"),
                                   basis=c("additive-tensor","additive","tensor","auto")){
 
@@ -350,7 +350,7 @@ deriv.kernel.spline <- function(x,
                                 kernel.type=c("nominal","ordinal"),
                                 xeval=NULL,
                                 zeval=NULL,
-                                complexity=c("degree","knots"),
+                                complexity=c("degree","knots","degree-knots"),
                                 knots=c("quantiles","uniform"),
                                 basis=c("additive-tensor","additive","tensor","auto"),
                                 deriv.index=1,
@@ -519,7 +519,7 @@ predict.factor.spline <- function(x,
                                   segments=1,
                                   xeval=NULL,
                                   zeval=NULL,
-                                  complexity=c("degree","knots"),
+                                  complexity=c("degree","knots","degree-knots"),
                                   knots=c("quantiles","uniform"),
                                   basis=c("additive-tensor","additive","tensor","auto"),
                                   prune=FALSE,
@@ -645,7 +645,7 @@ deriv.factor.spline <- function(x,
                                 segments=1,
                                 xeval=NULL,
                                 zeval=NULL,
-                                complexity=c("degree","knots"),
+                                complexity=c("degree","knots","degree-knots"),
                                 knots=c("quantiles","uniform"),
                                 basis=c("additive-tensor","additive","tensor","auto"),
                                 deriv.index=1,
@@ -733,7 +733,7 @@ cv.kernel.spline <- function(x,
                              ind.vals,
                              nrow.z.unique,
                              kernel.type=c("nominal","ordinal"),
-                             complexity=c("degree","knots"),
+                             complexity=c("degree","knots","degree-knots"),
                              knots=c("quantiles","uniform"),
                              basis=c("additive-tensor","additive","tensor","auto"),
                              cv.norm=c("L2","L1")) {
@@ -803,7 +803,7 @@ cv.factor.spline <- function(x,
                              degree=3,
                              segments=1,
                              kernel.type=c("nominal","ordinal"),
-                             complexity=c("degree","knots"),
+                             complexity=c("degree","knots","degree-knots"),
                              knots=c("quantiles","uniform"),
                              basis=c("additive-tensor","additive","tensor","auto"),
                              cv.norm=c("L2","L1")) {
